@@ -2,6 +2,7 @@
 - Added support for the sscinames output field to print subject scientific names to the tabular output format.
 - Fixed a compiler error for GCC 8.2.
 - Added option --stop-match-score to set the match score of stop codons.
+- Fixed a bug that caused the qqual output field to not be correctly clipped to the aligned part of the query.
 
 [0.9.24]
 - Fixed a compiler error on macOS.
